front end look finished

--- a/WebChat-Client/index.html
+++ b/WebChat-Client/index.html
@@ -14,7 +14,70 @@
             WebChat
         </div>
 
-        <div class="message-section"></div>
+        <div class="message-section">
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+            <!-- right side -->
+            <div class="msg-box received">
+                hi
+            </div>
+            <!-- left side -->
+            <div class="msg-box send">
+                hello
+            </div>
+
+        </div>
+
+        <div class="input-section">
+            <input type="text" class="input"/>
+            <button class="btn">Send</button>
+        </div>
 
     </div>
 
