not working but no errors

--- a/WebChat-Client/index.html
+++ b/WebChat-Client/index.html
@@ -76,11 +76,12 @@
 
         <div class="input-section">
             <input type="text" class="input"/>
-            <button class="btn">Send</button>
+            <button class="btn" >Send</button>
         </div>
 
     </div>
 
 </body>
-
+<script src="/node_modules/@microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="/chat.js"></script>
 </html>
